--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "red2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --max-old-space-size=8152 index"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "fast-csv": "2.4.1"
-  }
+	"name": "red2",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node --max-old-space-size=8152 index"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"fast-csv": "2.4.1"
+	},
+	"devDependencies": {
+		"node": "8.4.0"
+	}
 }
