--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"test": "mocha",
 		"start": "node --max-old-space-size=8152 index"
 	},
 	"keywords": [],
@@ -13,6 +14,7 @@
 		"fast-csv": "2.4.1"
 	},
 	"devDependencies": {
+		"mocha": "^5.0.1",
 		"node": "8.4.0"
 	}
 }
